--- a/packages/design-system/ui/components/color-picker/docs.mdx
+++ b/packages/design-system/ui/components/color-picker/docs.mdx
@@ -194,7 +194,7 @@ The custom range represents a matrix of all saturation and brightness combinatio
 
 Keep in mind that when implementing color conversions, this custom range picker is utilizing the HSB/HSV color model, and not the HSL model.
 
-This element _needs_ an inline style, with the `background` property set to the _working color_'s hue, as defined by the hue range input element desctibed above. As this element is meant to represent the current _working color_'s hue's saturation and lightness matrix, css's hsl() syntax is the most appropriate format here, with the hue being the current _working color_'s hue, the saturation set to 100% and the lightness set to 50% (the 50% lightness is to adjust this HSL range for the HSB color model).
+This element _needs_ an inline style, with the `background` property set to the _working color_'s hue, as defined by the hue range input element described above. As this element is meant to represent the current _working color_'s hue's saturation and lightness matrix, css's hsl() syntax is the most appropriate format here, with the hue being the current _working color_'s hue, the saturation set to 100% and the lightness set to 50% (the 50% lightness is to adjust this HSL range for the HSB color model).
 
 A gradient overlay will produce the effect of the saturation and brightness matrix automatically.
 
