--- a/packages/design-system/ui/components/illustration/docs.mdx
+++ b/packages/design-system/ui/components/illustration/docs.mdx
@@ -26,7 +26,7 @@ Illustrations should be used within other components, such as cards, to express 
 
 ### Accessibility
 
-Each SVG tag requires an <code>aria-hidden="true"</code> attribute.
+Each SVG tag requires an `aria-hidden="true"` attribute.
 
 <CodeBlock toggleCode={false}>
   <svg viewBox="0 0 483 218" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink">...</svg>
@@ -320,14 +320,14 @@ In most cases, one call to action will be enough. When using one call to action,
 
 ### One Call to Action - Button Brand
 
-  <CodeView style={{width: '400px'}}>
-    <IllustrationCTA button="slds-button slds-button_brand">
-      <Illustration>
-        <NoTask />
-        <IllustrationText heading="Lorem ipsum dolor" message="Lorem ipsum dolor sit amet, consectetur" />
-      </Illustration>
-    </IllustrationCTA>
-  </CodeView>
+<CodeView style={{width: '400px'}}>
+  <IllustrationCTA button="slds-button slds-button_brand">
+    <Illustration>
+      <NoTask />
+      <IllustrationText heading="Lorem ipsum dolor" message="Lorem ipsum dolor sit amet, consectetur" />
+    </Illustration>
+  </IllustrationCTA>
+</CodeView>
 
 ### Two Calls to Action
 
