--- a/packages/design-system/ui/components/progress-indicator/docs.mdx
+++ b/packages/design-system/ui/components/progress-indicator/docs.mdx
@@ -7,8 +7,6 @@ import { Step as VerticalStep, Progress as VerticalProgress } from './vertical/e
 import { Tooltip } from '../tooltips/base/example';
 import { Modal, ModalHeader, ModalContent, ModalFooter } from '../modals/base/example';
 
-// import style from './docs/index.scss';
-
 <div className="doc lead">
   A progress indicator component communicates to the user the progress of a
   particular process.
@@ -28,11 +26,11 @@ import { Modal, ModalHeader, ModalContent, ModalFooter } from '../modals/base/ex
 
 ### Implementation Requirements
 
-The <code>.slds-progress-bar</code> accepts a range from 0% to 100%, and this percentage should be applied with inline styling to the <code>div</code> with class <code>slds-progress-bar\_\_value</code> using JavaScript. If implementing a horizontal progress indicator, set the width, otherwise set the height for vertical progress indicators.
+The `slds-progress-bar` accepts a range from 0% to 100%, and this percentage should be applied with inline styling to the `div` with class `slds-progress-bar__value` using JavaScript. If implementing a horizontal progress indicator, set the width, otherwise set the height for vertical progress indicators.
 
 ### Accessibility
 
-As the percentage of completion changes, be sure to update the <code>aria-valuenow</code> property on the `&lt;div&gt;` with `class="slds-progress-bar"`, as well as the `slds-assistive-text` `&lt;span&gt;`.
+As the percentage of completion changes, be sure to update the `aria-valuenow` property on the `<div>` with `class="slds-progress-bar"`, as well as the `slds-assistive-text` `<span>`.
 
 <CodeBlock toggleCode={false}>
   <div
@@ -66,7 +64,7 @@ As the percentage of completion changes, be sure to update the <code>aria-valuen
 
 ### Active Step
 
-When a step becomes active, the `&lt;div&gt;` with class `.slds-progress__item` should also get the class `.slds-is-active`.
+When a step becomes active, the `<div>` with class `.slds-progress__item` should also get the class `.slds-is-active`.
 
 <Blockquote type="a11y" header="Accessibility Requirements">
   When a step is active, be sure to append "- Active" to the hidden button text
@@ -110,7 +108,7 @@ When the step is completed, the `.slds-is-active` class should be replaced with 
 
 ### Error in a Step
 
-When an error has occurred on a step, the `&lt;div&gt;` with class `.slds-progress__item` should also get the class `.slds-has-error`.
+When an error has occurred on a step, the `<div>` with class `.slds-progress__item` should also get the class `.slds-has-error`.
 
 <Blockquote type="a11y" header="Accessibility Requirements">
   When a step has an error, be sure to append "- Error" to the hidden button
@@ -211,7 +209,7 @@ When an error has occurred on a step, the `&lt;div&gt;` with class `.slds-progre
 
 ## Vertical
 
-To display a vertical progress indicator, the `&lt;div&gt;` with class `.slds-progress` should also get the class `.slds-progress_vertical`. The vertical progress indicator will take up 100% of the height of its container. The step titles in the vertical variant appear next to the step, instead of in a tooltip.
+To display a vertical progress indicator, the `<div>` with class `.slds-progress` should also get the class `.slds-progress_vertical`. The vertical progress indicator will take up 100% of the height of its container. The step titles in the vertical variant appear next to the step, instead of in a tooltip.
 
 <Blockquote type="note" header="Implementation Note">
   The key markup difference between the horizontal and vertical variants is the
@@ -234,7 +232,7 @@ To display a vertical progress indicator, the `&lt;div&gt;` with class `.slds-pr
 
 ### Green Success
 
-To create a green completed step, the `.slds-progress__item` element should also receive the `.slds-is-completed` class. In addition, the `&lt;span&gt;` with class `.slds-progress__marker_icon` should also get the class `slds-progress__marker_icon-success`.
+To create a green completed step, the `.slds-progress__item` element should also receive the `.slds-is-completed` class. In addition, the `<span>` with class `.slds-progress__marker_icon` should also get the class `slds-progress__marker_icon-success`.
 
 <Example title="Progress Indicator Vertical Success">
   <CodeView>
@@ -252,7 +250,7 @@ To create a green completed step, the `.slds-progress__item` element should also
 
 ### Error in a Step
 
-When an error has occurred on a step, the `&lt;div&gt;` with class `.slds-progress__item` should also get the class `.slds-has-error`.
+When an error has occurred on a step, the `<div>` with class `.slds-progress__item` should also get the class `.slds-has-error`.
 
 <Example title="Progress Indicator Vertical Success">
   <CodeView>
