--- a/packages/design-system/ui/components/prompt/docs.mdx
+++ b/packages/design-system/ui/components/prompt/docs.mdx
@@ -28,7 +28,7 @@ Expected keyboard interaction is the same as Modals ([same as Modals](/component
 - Modal message container should take initial focus
 
 ### Accessibility
-Prompt notifications are similar to modals, in that they are a focus trap, but they should take a slightly different `role` of `alertdialog` to indicate their severity. Like modals they should be labelled by their headings, but additonally they should be described by the message details of the prompt.
+Prompt notifications are similar to modals, in that they are a focus trap, but they should take a slightly different `role` of `alertdialog` to indicate their severity. Like modals they should be labelled by their headings, but additionally they should be described by the message details of the prompt.
 
 The element containing the prompt message should be the target focus of the browser when it is displayed, which is why we add `tabindex="0"` to `slds-modal__container`.
 
