--- a/packages/design-system/ui/components/dueling-picklist/docs.mdx
+++ b/packages/design-system/ui/components/dueling-picklist/docs.mdx
@@ -63,8 +63,7 @@ This component is essentially 2 ARIA listboxes side by side, so we follow the [A
 A Dueling Picklist should have a group label, similar to using a `fieldset` and `legend` on grouped form controls. To achieve this, wrap the Dueling Picklist in an `slds-form-element` and add a `div` with the same class names that are applied to a `legend` element in a fieldset, `slds-form-element__label slds-form-element__legend`.
 
 <Blockquote header="Labeling the group" type="a11y">
-  It is important that the `slds-form-element` `&lt;div&gt;` has the
-  `role="group"` attribute applied, along with `aria-labelledby`, whose value is
+  It is important that the <code>slds-form-element</code> <code>&lt;div&gt;</code> has the <code>role="group"</code> attribute applied, along with <code>aria-labelledby</code>, whose value is
   the ID of the visible group label.
 </Blockquote>
 
@@ -76,7 +75,7 @@ A Dueling Picklist should have a group label, similar to using a `fieldset` and 
 
 ## Responsive
 
-To make the dueling picklist responsive or use it within narrow regions, apply the class `slds-dueling-picklist__column_responsive` to the `&lt;div&gt;`s with class `slds-dueling-picklist__column` that contain options (not the columns that only contain buttons). Any items longer than the space available will truncate with ellipses.
+To make the dueling picklist responsive or use it within narrow regions, apply the class `slds-dueling-picklist__column_responsive` to the `<div>`s with class `slds-dueling-picklist__column` that contain options (not the columns that only contain buttons). Any items longer than the space available will truncate with ellipses.
 
 <Example title="Dueling Picklist Responsive">
   <CodeView>
@@ -86,9 +85,9 @@ To make the dueling picklist responsive or use it within narrow regions, apply t
 
 <Blockquote header="Adjusting Height" type="note">
   To adjust the height of the listboxes, set the height using an inline style on
-  _both_ of the `&lt;div&gt;`s with class `slds-dueling-picklist__column`. If
+  _both_ of the <code>&lt;div&gt;</code>s with class <code>slds-dueling-picklist__column</code>. If
   you are setting it based on a maximum number of items being shown before
-  scrolling, you can set `height = (2.25rem * numItems) + 1rem`.
+  scrolling, you can set <code>height = (2.25rem * numItems) + 1rem</code>.
 </Blockquote>
 
 <CodeBlock toggleCode={false}>
@@ -118,7 +117,7 @@ To make the dueling picklist responsive or use it within narrow regions, apply t
 If the user needs to select multiple options for a field, like a list of languages supported, then use a dueling picklist without the re-order arrows on the right.
 
 <Blockquote header="Helpful Assistive Text" type="a11y">
-  The assistive text content in the `option-drag-label` `&lt;div&gt;` should
+  The assistive text content in the <code>option-drag-label</code> <code>&lt;div&gt;</code> should
   provide clear instructions on how to drag and drop with a keyboard.
 </Blockquote>
 
@@ -153,7 +152,7 @@ If the user needs to select multiple options for a field, like a list of languag
 ### Dropped Items
 
 <Blockquote type="a11y" header="Aria Live">
-  The `drag-live-region` `&lt;div&gt;` with `aria-live="assertive"` should
+  The <code>drag-live-region</code> <code>&lt;div&gt;</code> with <code>aria-live="assertive"</code> should
   update as items are moved to provide context about the state and location of
   the items.
 </Blockquote>
@@ -197,7 +196,7 @@ If items are not able to be removed or reordered from the selected list, a lock 
 
 If the order of the selected options matters, include the vertical arrows to the right. This allows the user to reorder the second listbox of options.
 
-<Example title="Dueling Picklist with Reoder Active">
+<Example title="Dueling Picklist with Reorder Active">
   <CodeView>
     <MultiSelect dataSet={DefaultSnapShot} />
   </CodeView>
@@ -206,14 +205,14 @@ If the order of the selected options matters, include the vertical arrows to the
 The following examples show the process of selecting an item, moving it within a list, and dropping it in a final position.
 
 <Blockquote type="a11y" header="Aria Live">
-  Pay attention to the `drag-live-region` `&lt;div&gt;` with
-  `aria-live="assertive"`. This should update as items are moved to provide
+  Pay attention to the <code>drag-live-region</code> <code>&lt;div&gt;</code> with
+  <code>aria-live="assertive"</code>. This should update as items are moved to provide
   context about the state and location of the items at all times.
 </Blockquote>
 
 #### Item Selected
 
-<Example title="Dueling Picklist with Reoder Active Item Selected">
+<Example title="Dueling Picklist with Reorder Active Item Selected">
   <CodeView>
     <MultiSelect dataSet={SelectedSnapShot} />
   </CodeView>
@@ -223,7 +222,7 @@ The following examples show the process of selecting an item, moving it within a
 
 Within a list, users are able to drag and drop an item.
 
-<Example title="Dueling Picklist with Reoder Active Item Grabbed">
+<Example title="Dueling Picklist with Reorder Active Item Grabbed">
   <CodeView>
     <MultiSelect dataSet={GrabbedSnapShot} />
   </CodeView>
@@ -231,7 +230,7 @@ Within a list, users are able to drag and drop an item.
 
 #### Item Moved Within a List
 
-<Example title="Dueling Picklist with Reoder Active Item Moved within List">
+<Example title="Dueling Picklist with Reorder Active Item Moved within List">
   <CodeView>
     <MultiSelect dataSet={MovedInSnapShot} />
   </CodeView>
@@ -239,7 +238,7 @@ Within a list, users are able to drag and drop an item.
 
 #### Item Dropped in a List
 
-<Example title="Dueling Picklist with Reoder Active Item Dropped">
+<Example title="Dueling Picklist with Reorder Active Item Dropped">
   <CodeView>
     <MultiSelect dataSet={DroppedSnapShot} />
   </CodeView>
