--- a/packages/design-system/ui/components/expression/docs.mdx
+++ b/packages/design-system/ui/components/expression/docs.mdx
@@ -32,7 +32,7 @@ We also include size variants to fit a variety of use cases:
 
 #### Markup
 
-Each row in the expression builder is a `&lt;fieldset&gt;` and is contained in an `&lt;li&gt;` inside of a `&lt;ul&gt;`.
+Each row in the expression builder is a `<fieldset>` and is contained in an `<li>` inside of a `<ul>`.
 
 <CodeBlock toggleCode={false}>
   <ul>
@@ -48,7 +48,7 @@ Each row in the expression builder is a `&lt;fieldset&gt;` and is contained in a
   </ul>
 </CodeBlock>
 
-The first child DOM element of the `&lt;fieldset&gt;` should be the `&lt;legend&gt;`, which includes the logic operator, such as "AND" or "OR", and assistive text describing the current rule, such as "Condition 3".
+The first child DOM element of the `<fieldset>` should be the `<legend>`, which includes the logic operator, such as "AND" or "OR", and assistive text describing the current rule, such as "Condition 3".
 
 <CodeBlock toggleCode={false}>
   <legend className="slds-expression__legend">
