feat(docs): Mobile/touch examples (#4154)
* chore(infra): Add Webpack loaders & update packages
* chore(infra): Add SLDSFrame React component
* chore(infra): Add common docs text React component
* chore(infra): Only load styles where needed
* chore(infra): Add demo version of touch styles (without media query)
* chore(docs): Add mobile/touch example to Buttons docs
* chore(docs): Webpack config tweak
* chore(docs): Streamline CSS in webpack & Storybook
* chore(infra): Add touch-demo to build & dist process
* chore(infra): Tweak `border-box-line-height` mixin
* chore(touch): Move `touch-demo` to `__internal`
* chore(misc): Add parentheses to equations
* chore(docs): Tweak mobile frame component
* chore(docs): Tweak `select` to accept change handler
* chore(docs): Tweak mobile/touch text
* chore(infra): Tweak `CodeView` to function with mobile/touch frame
* chore(path): Remove `card`
* chore(path): Add mobile example to docs
* chore(button): Add mobile example to docs
* chore(docs): Mobile/touch tweaks from feedback
* chore(docs): Tweak Webpack config to properly load fonts
* fix(infra): Lint fix in SLDSFrame
* chore(infra): Remove obsolete file reference
* chore(docs): Fix asset location

--- a/packages/design-system/ui/components/path/docs.mdx
+++ b/packages/design-system/ui/components/path/docs.mdx
@@ -3,6 +3,7 @@ import CodeBlock from '../../../shared/components/CodeBlock';
 import Blockquote from '../../../shared/components/Blockquote';
 import { getDisplayElementById } from '../../shared/helpers';
 import * as PathExamples from './base/example';
+import { MobileNotice, MobileBlurb } from '../../shared/doc-text';
 
 <div className="lead doc">
   The Path communicates to the user the progress of a particular process.
@@ -43,6 +44,14 @@ The markup structure is identical, just some attributes change their values.
 - For both with and without Path Stage Coaching variants, the following keyboard navigation applies
 - `left` and `right` arrow keys move focus _and_ selection, with `aria-selected="true"`
 
+### Mobile
+
+<MobileBlurb patternSpecificText="elements of path will have an increased size to accommodate tapping with a finger instead of the more precise mouse cursor" />
+
+<CodeView frameOnly>
+  {getDisplayElementById(PathExamples.states, 'later-stage')}
+</CodeView>
+
 ## Examples
 
 ### Base
@@ -65,7 +74,7 @@ The markup structure is identical, just some attributes change their values.
 
 ### With visible tooltip
 
-<CodeView>
+<CodeView style={{minHeight: '5rem'}}>
   {getDisplayElementById(PathExamples.states, 'with-visible-tooltip')}
 </CodeView>
 
