--- a/packages/design-system/ui/components/buttons/docs.mdx
+++ b/packages/design-system/ui/components/buttons/docs.mdx
@@ -7,6 +7,7 @@ import * as StatefulExamples from './stateful/example';
 import * as DualStatefulExamples from './dual-stateful/example';
 import { getDisplayElementById } from '../../shared/helpers';
 import SvgIcon from '../../shared/svg-icon';
+import { MobileNotice, MobileBlurb } from '../../shared/doc-text';
 
 <div className="doc lead">
   Buttons are clickable items used to perform an action.
@@ -69,6 +70,22 @@ Finally, color alone does not suffice when conveying the meaning of buttons. Ens
 ### Links that look like Buttons
 
 Use these with caution - dictation software users may not be able to properly identify these actions, as they can say "show buttons" and these won't highlight since they are semantically links, even though they may look like buttons.
+
+### Mobile
+
+<MobileBlurb patternSpecificText="buttons will have an increased size to accommodate tapping with a finger instead of the more precise mouse cursor" />
+
+<CodeView frameOnly hideDeviceSelector>
+  <React.Fragment>
+    {getDisplayElementById(ButtonExamples.examples, 'base-link')}
+    {getDisplayElementById(ButtonExamples.examples, 'neutral-link')}
+    {getDisplayElementById(ButtonExamples.examples, 'brand-link')}
+    {getDisplayElementById(ButtonExamples.examples, 'outline-brand-link')}
+    {getDisplayElementById(ButtonExamples.examples, 'destructive-link')}
+    {getDisplayElementById(ButtonExamples.examples, 'text-destructive-link')}
+    {getDisplayElementById(ButtonExamples.examples, 'success-link')}
+  </React.Fragment>
+</CodeView>
 
 ## Base
 
@@ -170,6 +187,10 @@ The SVG, element, or icon inside the button receives the `slds-button__icon` cla
 ### Left Icon
 
 <CodeView>{IconExamples.default}</CodeView>
+
+<MobileNotice docsLink="#Mobile" header="Mobile context changes" elementName="button icons" />
+
+<CodeView frameOnly hideDeviceSelector>{IconExamples.default}</CodeView>
 
 ### Right Icon
 
