--- a/packages/design-system/ui/components/checkbox/docs.mdx
+++ b/packages/design-system/ui/components/checkbox/docs.mdx
@@ -4,6 +4,7 @@ import Blockquote from '../../../shared/components/Blockquote';
 import * as CheckboxExamples from './base/example';
 import * as CheckboxFormElementExamples from './form-element/example';
 import { getDisplayElementById } from '../../shared/helpers';
+import { MobileNotice, MobileBlurb } from '../../shared/doc-text';
 
 <div className="doc lead">
   A checkable input that communicates if an option is true, false or indeterminate
@@ -28,6 +29,14 @@ When a single checkbox is required, `<div class="slds-checkbox">` should get `<a
 When a checkbox group is required, the `<fieldset>` should receive the class `.slds-is-required`. The `<legend>` should then get `<abbr class="required" title="required">*</abbr>` added to the DOM for visual indication that the checkbox group is required.
 
 As SLDS checkboxes rely on the `:checked` pseudo selector, and the indeterminate state is only accessible via JavaScript, the use of a CSS class on the input will be necessary to implement this in SLDS. Use JavaScript to add the class when the indeterminate property is set to true on the input.
+
+### Mobile
+
+<MobileBlurb patternSpecificText="checkboxes will have an increased size to accommodate tapping with a finger instead of the more precise mouse cursor, as well as having larger label text" />
+
+<CodeView frameOnly hideDeviceSelector>
+  {CheckboxExamples.default}
+</CodeView>
 
 ## Base
 
